added tp2 files

--- a/Exercises/.vscode/settings.json
+++ b/Exercises/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "cmake.debugConfig": {
         "args": [
-            "-p", ".*Hello,?\\\\s*world.*",
-            "-t", "Hello, world!"
-        ]
-    }
+        ],
+        "cwd": "${workspaceFolder}"
+    },
+    "gcovViewer.highlightMissedLines": true,
+    "files.associations": {
+        "iostream": "cpp",
+        "iomanip": "cpp"
+    },
+    // "C_Cpp.loggingLevel": "Debug"
 }
